force-app/main/default/objects/Item_da_Instrucao_de_servico__c/Item_da_Instrucao_de_servico__c.object-meta.xml
<CustomObject>
    <label>Tópico Instrução de Serviço</label>
    <nameField>
        <label>Titulo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tópicos das Instruções de Serviço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>