force-app/main/default/objects/Item_da_Instrucao_de_servico__c/fields/Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Conteudo__c</fullName>
    <label>Conteúdo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>