force-app/main/default/objects/Item_da_Instrucao_de_servico__c/fields/Instrucao_de_Servico__c.field-meta.xml
<CustomField>
    <fullName>Instrucao_de_Servico__c</fullName>
    <label>Instrução de Serviço</label>
    <referenceTo>Instrucao_de_Servico__c</referenceTo>
    <relationshipName>Itens_das_Instrucoes_de_servico</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>