force-app/main/default/objects/Item_da_Instrucao_de_servico__c/fields/Numero_do_Topico__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Topico__c</fullName>
    <label>Número do Tópico</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>